TestSuite/PascalABCTests/errors/err0276.pas
type TClass = static class
end;

function f: TClass;
begin
  
end;
begin
  
end.